[package]
name = "server"
version = "0.1.0"
authors = ["xecua <courser4848@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix = "0.9.0"
actix-rt = "1.1.0"
actix-web = "2.0.0"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
futures = "0.3.4"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"

[dev-dependencies]
diesel = { version = "1.4.4", features = ["sqlite", "mysql", "r2d2"] }
diesel_migrations = "1.4.0"
